# NBodySimulation

./: .gitignore  CMakeLists.txt
include/: body.h  init.h
src/common/: init.cpp
src/cpu/: cpu_simulation.cpp
src/gpu/: main_gpu.cu  nbody_cuda.cu  nbody_cuda.h
